--- a/pom.xml
+++ b/pom.xml
@@ -65,66 +65,42 @@
     </site>
   </distributionManagement>
 
+  <repositories>
+    <repository>
+      <id>rubygems-releases</id>
+      <url>http://rubygems-proxy.torquebox.org/releases</url>
+    </repository>
+  </repositories>
+
   <properties>
     <java.level>1.6</java.level>
-    <jruby.version>1.7.2</jruby.version>
-    <maven.target-version>2.2.1</maven.target-version>
+    <vagrant.version>1.0.6</vagrant.version>
+    <gem-maven-plugin.version>0.29.3</gem-maven-plugin.version>
     <maven-plugin-tools-javadoc.version>3.2</maven-plugin-tools-javadoc.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.apache.maven</groupId>
-        <artifactId>maven-plugin-api</artifactId>
-        <version>${maven.target-version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.maven</groupId>
-        <artifactId>maven-project</artifactId>
-        <version>${maven.target-version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.maven</groupId>
-        <artifactId>maven-model</artifactId>
-        <version>${maven.target-version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jruby</groupId>
-        <artifactId>jruby-complete</artifactId>
-        <version>${jruby.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.maven.plugin-tools</groupId>
-        <artifactId>maven-plugin-annotations</artifactId>
-        <version>${maven-plugin-plugin.version}</version>
+        <groupId>rubygems</groupId>
+        <artifactId>vagrant</artifactId>
+        <version>${vagrant.version}</version>
+        <type>gem</type>
       </dependency>
     </dependencies>
   </dependencyManagement>
 
   <dependencies>
     <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-plugin-api</artifactId>
+      <groupId>de.saumya.mojo</groupId>
+      <artifactId>gem-maven-plugin</artifactId>
+      <version>${gem-maven-plugin.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-project</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven.plugin-tools</groupId>
-      <artifactId>maven-plugin-annotations</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jruby</groupId>
-      <artifactId>jruby-complete</artifactId>
+      <groupId>rubygems</groupId>
+      <artifactId>vagrant</artifactId>
+      <type>gem</type>
       <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -149,9 +125,15 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>de.saumya.mojo</groupId>
+        <artifactId>gem-maven-plugin</artifactId>
+        <version>${gem-maven-plugin.version}</version>
+        <extensions>true</extensions>
+      </plugin>
+      <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>${java.level}</source>
+          <source>1.5</source>
           <target>${java.level}</target>
           <optimize>true</optimize>
           <showWarnings>true</showWarnings>
@@ -160,9 +142,6 @@
       </plugin>
       <plugin>
         <artifactId>maven-plugin-plugin</artifactId>
-        <configuration>
-          <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-        </configuration>
         <executions>
           <execution>
             <id>mojo-descriptor</id>
@@ -211,12 +190,6 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
           <encoding>${encoding}</encoding>
-          <links>
-            <link>http://maven.apache.org/ref/${maven.target-version}/apidocs</link>
-            <link>http://plexus.codehaus.org/plexus-components/plexus-digest/apidocs</link>
-            <link>http://plexus.codehaus.org/plexus-utils/apidocs</link>
-            <link>http://junit.sourceforge.net/javadoc</link>
-          </links>
           <tagletArtifacts>
             <tagletArtifact>
               <groupId>org.apache.maven.plugin-tools</groupId>
@@ -266,12 +239,6 @@
         <version>${maven-javadoc-plugin.version}</version>
         <configuration>
           <encoding>${encoding}</encoding>
-          <links>
-            <link>http://maven.apache.org/ref/${maven.target-version}/apidocs</link>
-            <link>http://plexus.codehaus.org/plexus-components/plexus-digest/apidocs</link>
-            <link>http://plexus.codehaus.org/plexus-utils/apidocs</link>
-            <link>http://junit.sourceforge.net/javadoc</link>
-          </links>
           <tagletArtifacts>
             <tagletArtifact>
               <groupId>org.apache.maven.plugin-tools</groupId>
