--- a/src/it/projects/all/invoker.properties
+++ b/src/it/projects/all/invoker.properties
@@ -37,7 +37,7 @@ invoker.goals = clean install
 # invoker.failureBehavior = fail-never
 
 # The expected result of the build, possible values are "success" (default) and "failure"
-invoker.buildResult = failure
+invoker.buildResult = success
 
 # A boolean value controlling the aggregator mode of Maven, defaults to "false"
 # invoker.nonRecursive = true
@@ -53,11 +53,11 @@ invoker.buildResult = failure
 
 # An optional human friendly name for this build job to be included in the build reports.
 # Since plugin version 1.4
-invoker.name = package
+invoker.name = all
 
 # An optional description for this build job to be included in the build reports.
 # Since plugin version 1.4
-invoker.description = package goal test
+invoker.description = all VM commands invoked
 
 # A comma separated list of JRE versions on which this build job should be run.
 # Since plugin version 1.4
