--- a/src/it/projects/init/pom.xml
+++ b/src/it/projects/init/pom.xml
@@ -37,7 +37,7 @@
               <goal>init</goal>
             </goals>
             <configuration>
-              <name>testbox</name>
+              <box>testbox</box>
               <url>@test.box.url@</url>
             </configuration>
           </execution>
