--- a/src/it/projects/all/pom.xml
+++ b/src/it/projects/all/pom.xml
@@ -20,7 +20,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>net.ju-n.maven.plugins.vagrant.it</groupId>
-  <artifactId>halt</artifactId>
+  <artifactId>all</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
@@ -34,8 +34,25 @@
           <execution>
             <phase>test</phase>
             <goals>
+              <goal>box-add</goal>
+              <goal>init</goal>
+              <goal>up</goal>
+              <goal>ssh-config</goal>
+              <goal>ssh</goal>
+              <goal>provision</goal>
+              <goal>reload</goal>
+              <goal>suspend</goal>
+              <goal>resume</goal>
               <goal>halt</goal>
+              <goal>package</goal>
+              <goal>destroy</goal>
             </goals>
+            <configuration>
+              <box>testbox</box>
+              <url>@test.box.url@</url>
+              <command>ls -l /vagrant</command>
+              <output>${project.build.directory}/packaged.box</output>
+            </configuration>
           </execution>
         </executions>
       </plugin>
