--- a/src/it/projects/init-twice/pom.xml
+++ b/src/it/projects/init-twice/pom.xml
@@ -38,7 +38,7 @@
               <goal>init</goal>
             </goals>
             <configuration>
-              <name>testbox</name>
+              <box>testbox</box>
               <url>@test.box.url@</url>
             </configuration>
           </execution>
