--- a/src/it/projects/box/pom.xml
+++ b/src/it/projects/box/pom.xml
@@ -39,7 +39,7 @@
               <goal>box-remove</goal>
             </goals>
             <configuration>
-              <name>testbox</name>
+              <box>testbox</box>
               <url>@test.box.url@</url>
             </configuration>
           </execution>
