--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -26,7 +25,7 @@
 
   <groupId>net.ju-n.maven.plugins</groupId>
   <artifactId>vagrant-maven-plugin</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>maven-plugin</packaging>
 
   <name>Vagrant Maven plugin</name>
@@ -45,7 +44,7 @@
     <url>http://github.com/nicoulaj/vagrant-maven-plugin</url>
     <connection>scm:git:git@github.com:nicoulaj/vagrant-maven-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:nicoulaj/vagrant-maven-plugin.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>1.0.0</tag>
   </scm>
 
   <issueManagement>
