--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,8 @@
   </issueManagement>
 
   <ciManagement>
-    <system>Cloudbees BuildHive</system>
-    <url>https://buildhive.cloudbees.com/job/nicoulaj/job/vagrant-maven-plugin/</url>
+    <system>Travis CI</system>
+    <url>http://travis-ci.org/nicoulaj/vagrant-maven-plugin</url>
   </ciManagement>
 
   <distributionManagement>
