--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
   <groupId>net.ju-n.maven.plugins</groupId>
   <artifactId>vagrant-maven-plugin</artifactId>
-  <version>1.0.2</version>
+  <version>1.0.3-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>Vagrant Maven plugin</name>
@@ -44,7 +44,7 @@
     <url>http://github.com/nicoulaj/vagrant-maven-plugin</url>
     <connection>scm:git:git@github.com:nicoulaj/vagrant-maven-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:nicoulaj/vagrant-maven-plugin.git</developerConnection>
-    <tag>1.0.2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
